Wrapped header and main content in a container Layout is now correct

--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #000000;
+    display: grid;
+    grid-template-columns: 250px auto;
 }
 .sidebar {
     width: 250px;
-    background-color: #f3d00bdc;
+    background-color: #8b59cc;
     padding: 15px;
     height: 100vh;
 }
@@ -35,4 +37,20 @@ body {
     grid-template-columns: auto 1fr;
     align-items: center;
     gap: 10px;
+}
+.header {
+    background-color: rgb(255, 255, 255);
+
+}
+.search input {
+    border: none;
+    background-color: rgb(238, 238, 238);
+    border-radius: 10px;
+}
+.main-content {
+    background-color: rgb(238, 238, 238);
+}
+.wrapper {
+    display: grid;
+    grid-template-rows: 200px auto;
 }
